--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,13 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.android.support:mediarouter-v7:26.1.0'
+    //ORMLite
+    implementation 'com.j256.ormlite:ormlite-android:5.0'
+
+    //retrieving data from the API using Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.2.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    //cards display
+    implementation 'com.android.support:cardview-v7:26.1.+'
+    implementation 'com.android.support:recyclerview-v7:26.1.+'
 }
