--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.+'
     //picasso
     implementation "com.squareup.picasso:picasso:2.4.0"
+    //
+    implementation "de.hdodenhof:circleimageview:2.2.0"
 }
