--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,4 +34,8 @@
             android:parentActivityName=".ui.activity.BaseActivity"></activity>
     </application>
 
+    <uses-feature android:name="android.hardware.camera" android:required="false">
+    </uses-feature>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+
 </manifest>
