--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     implementation "com.squareup.picasso:picasso:2.4.0"
     //
     implementation "de.hdodenhof:circleimageview:2.2.0"
+    //location
+    implementation "com.google.android.gms:play-services-location:11.0.1"
 }
