--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,12 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false"></uses-feature>
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/sc"
@@ -30,12 +36,10 @@
             android:name=".ui.activity.LoginActivity"
             android:label="@string/title_activity_login" />
         <activity android:name=".ui.activity.SignUpActivity" />
-        <activity android:name=".ui.activity.EditProfileInformationActivity"
-            android:parentActivityName=".ui.activity.BaseActivity"></activity>
+        <activity
+            android:name=".ui.activity.EditProfileInformationActivity"
+            android:parentActivityName=".ui.activity.BaseActivity" />
+        <activity android:name=".ui.activity.CreateNewEventActivity"></activity>
     </application>
-
-    <uses-feature android:name="android.hardware.camera" android:required="false">
-    </uses-feature>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 
 </manifest>
