--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,6 @@ dependencies {
     //
     implementation "de.hdodenhof:circleimageview:2.2.0"
     //location
-    implementation "com.google.android.gms:play-services-location:11.0.1"
+    implementation 'com.google.android.gms:play-services-maps:12.0.0'
+    implementation 'com.google.android.gms:play-services-location:12.0.0'
 }
